--- a/page1.html
+++ b/page1.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=K1mzmw"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=K1mzmw" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=6HEKTN"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=6HEKTN" type="text/css">
 
   
   
@@ -69,7 +69,7 @@
 					
 					
 				</div>
-				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-secondary display-4" href="index.html#LIENHE"> Start Now!</a></div>
+				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-secondary display-4" href="index.html#form03-25">ĐĂNG KÝ</a></div>
 			</div>
 		</div>
 	</nav>
