--- a/page3.html
+++ b/page3.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=ij35qu"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=ij35qu" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=VZ06k4"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=VZ06k4" type="text/css">
 
   
   
@@ -70,7 +70,7 @@
 					
 					
 				</div>
-				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-secondary display-4" href="index.html#LIENHE"> Start Now!</a></div>
+				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-secondary display-4" href="index.html#form03-25">ĐĂNG KÝ</a></div>
 			</div>
 		</div>
 	</nav>
