--- a/page1.html
+++ b/page1.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=6HEKTN"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=6HEKTN" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=4jaThb"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=4jaThb" type="text/css">
 
   
   
@@ -51,8 +51,8 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-						<a class="nav-link link text-black text-primary display-7" href="index.html#DAU">E.TRAVEL STORY</a>
-					</li><li class="nav-item"><a class="nav-link link text-black text-primary display-7" href="index.html#TOUR">SIGNATURE TOUR</a></li>
+						<a class="nav-link link text-black text-primary display-7" href="index.html#DAU">CÂU CHUYỆN E.TRAVEL</a>
+					</li><li class="nav-item"><a class="nav-link link text-black text-primary display-7" href="index.html#TOUR">TOUR NỔI BẬT</a></li>
 					<li class="nav-item">
 						<a class="nav-link link text-black text-primary display-7" href="index.html#CANHDEP" aria-expanded="false">BLOG/NEWS</a>
 					</li>
