--- a/Ehumahtravel.html
+++ b/Ehumahtravel.html
@@ -5,10 +5,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
-  <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:image:src" content="assets/images/Ehumahtravel-meta.jpeg">
-  <meta property="og:image" content="assets/images/Ehumahtravel-meta.jpeg">
-  <meta name="twitter:title" content="Ehumahtravel">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-e.travel.png-96x96.png" type="image/x-icon">
   <meta name="description" content="Ehumahtravel du lịch nghỉ dưỡng tại Ninh Thuận">
@@ -24,7 +20,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=skCTcK"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=skCTcK" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=ktQxom"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=ktQxom" type="text/css">
 
   
   
@@ -38,6 +34,7 @@
   gtag('config', 'G-W3RSMJFH1N');
 </script>
   <meta name="robots" content="index, follow">
+<meta property="og:image" content="https://www.ehumahtravel.com/Ehumahtravel.html/assets/images/Ehumahtravel-meta.jpeg">
 </head>
 <body>
   
