--- a/page3.html
+++ b/page3.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=Hh8Uol"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=Hh8Uol" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=iYvpbz"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=iYvpbz" type="text/css">
 
   
   
@@ -61,7 +61,7 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-						<a class="nav-link link text-black text-primary display-7" href="index.html#DAU">CÂU CHUYỆN E.TRAVEL</a>
+						<a class="nav-link link text-black text-primary show display-7" href="index.html#DAU" aria-expanded="true">CÂU CHUYỆN E.TRAVEL</a>
 					</li><li class="nav-item"><a class="nav-link link text-black text-primary display-7" href="index.html#TOUR">TOUR NỔI BẬT</a></li>
 					<li class="nav-item">
 						<a class="nav-link link text-black text-primary display-7" href="index.html#CANHDEP" aria-expanded="false">BLOG/NEWS</a>
