--- a/ke-hoach-marketing-360.html
+++ b/ke-hoach-marketing-360.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:image:src" content="assets/images/ke-hoach-marketing-360-meta.jpeg">
+  <meta property="og:image" content="assets/images/ke-hoach-marketing-360-meta.jpeg">
+  <meta name="twitter:title" content="Kế hoạch Marketing 360">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-e.travel.png-96x96.png" type="image/x-icon">
   <meta name="description" content="">
@@ -20,7 +24,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=IvLNNF"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=IvLNNF" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=4AMLBK"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=4AMLBK" type="text/css">
 
   
   
